@@ -1091,6 +1091,7 @@ EXTRA_DIST = \
   poke.pkl/break-for-1.pk \
   poke.pkl/break-while-1.pk \
   poke.pkl/break-while-2.pk \
+  poke.pkl/break-while-3.pk \
   poke.pkl/builtins-1.pk \
   poke.pkl/cast-any-to-function-diag-1.pk \
   poke.pkl/cast-array-1.pk \
